--- a/src/AppBundle/Resources/views/Default/sologame.html.twig
+++ b/src/AppBundle/Resources/views/Default/sologame.html.twig
@@ -76,138 +76,138 @@
             <p><a href="{{path('app_main')}}" class="btn btn-danger btn-sm cancelButton" style="font-family:'Arcade Rounded'" role="button">Not now!</a></p>
         </div>
     </div>
-        <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6 mycol">
+    <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6 mycol">
 
 
 
-            <div class="col-xs-15 centered">
-                <div class="chevronDiv"><a href="#" class="moveHref" id="a-col"><span data-action="col1" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
+        <div class="col-xs-15 centered">
+            <div class="chevronDiv"><a href="#" class="moveHref" id="a-col"><span data-action="col1" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
 
-                <div class="panel panel-info" id="colMain1" style="display: none;">
-                    <div class="place row6" id="col16">
-                    </div>
-                    <div class="place row5" id="col15">
-                    </div>
-                    <div class="place row4" id="col14">
-                    </div>
-                    <div class="place row3" id="col13">
-                    </div>
-                    <div class="place row2" id="col12">
-                    </div>
-                    <div class="place row1" id="col11">
-                    </div>
+            <div class="panel panel-info" id="colMain1" style="display: none;">
+                <div class="place row6" id="col16">
+                </div>
+                <div class="place row5" id="col15">
+                </div>
+                <div class="place row4" id="col14">
+                </div>
+                <div class="place row3" id="col13">
+                </div>
+                <div class="place row2" id="col12">
+                </div>
+                <div class="place row1" id="col11">
                 </div>
             </div>
-            <div class="col-xs-15 centered">
-                <div class="chevronDiv"><a href="#" class="moveHref" id="b-col"><span data-action="col2" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
-
-                <div class="panel panel-info" id="colMain2" style="display: none;">
-                    <div class="place row6" id="col26">
-                    </div>
-                    <div class="place row5" id="col25">
-                    </div>
-                    <div class="place row4" id="col24">
-                    </div>
-                    <div class="place row3" id="col23">
-                    </div>
-                    <div class="place row2" id="col22">
-                    </div>
-                    <div class="place row1" id="col21">
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-15 centered">
-                <div class="chevronDiv"><a href="#" class="moveHref" id="c-col"><span data-action="col3" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
-
-                <div class="panel panel-info" id="colMain3" style="display: none;">
-                    <div class="place row6" id="col36" >
-                    </div>
-                    <div class="place row5" id="col35" >
-                    </div>
-                    <div class="place row4" id="col34" >
-                    </div>
-                    <div class="place row3" id="col33" >
-                    </div>
-                    <div class="place row2" id="col32" >
-                    </div>
-                    <div class="place row1" id="col31" >
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-15 centered">
-                <div class="chevronDiv"><a href="#" class="moveHref" id="d-col"><span data-action="col4" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
-                <div class="panel panel-info" id="colMain4" style="display: none;">
-                    <div class="place row6" id="col46" >
-                    </div>
-                    <div class="place row5" id="col45" >
-                    </div>
-                    <div class="place row4" id="col44" >
-                    </div>
-                    <div class="place row3" id="col43" >
-                    </div>
-                    <div class="place row2" id="col42" >
-                    </div>
-                    <div class="place row1" id="col41" >
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-15 centered">
-                <div class="chevronDiv"><a href="#" class="moveHref" id="e-col"><span data-action="col5" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
-                <div class="panel panel-info" id="colMain5" style="display: none;">
-                    <div class="place row6" id="col56" >
-                    </div>
-                    <div class="place row5" id="col55" >
-                    </div>
-                    <div class="place row4" id="col54" >
-                    </div>
-                    <div class="place row3" id="col53" >
-                    </div>
-                    <div class="place row2" id="col52" >
-                    </div>
-                    <div class="place row1" id="col51" >
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-15 centered">
-                <div class="chevronDiv"><a href="#" class="moveHref" id="f-col"><span data-action="col6" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
-                <div class="panel panel-info" id="colMain6" style="display: none;">
-                    <div class="place row6" id="col66" >
-                    </div>
-                    <div class="place row5" id="col65" >
-                    </div>
-                    <div class="place row4" id="col64" >
-                    </div>
-                    <div class="place row3" id="col63" >
-                    </div>
-                    <div class="place row2" id="col62" >
-                    </div>
-                    <div class="place row1" id="col61" >
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-15 centered">
-                <div class="chevronDiv"><a href="#" class="moveHref" id="g-col"><span data-action="col7" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
-                <div class="panel panel-info" id="colMain7" style="display: none;">
-                    <div class="place row6" id="col76" >
-                    </div>
-                    <div class="place row5" id="col75" >
-                    </div>
-                    <div class="place row4" id="col74" >
-                    </div>
-                    <div class="place row3" id="col73" >
-                    </div>
-                    <div class="place row2" id="col72" >
-                    </div>
-                    <div class="place row1" id="col71" >
-                    </div>
-                </div>
-            </div>
-
-
-
-
-
         </div>
+        <div class="col-xs-15 centered">
+            <div class="chevronDiv"><a href="#" class="moveHref" id="b-col"><span data-action="col2" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
+
+            <div class="panel panel-info" id="colMain2" style="display: none;">
+                <div class="place row6" id="col26">
+                </div>
+                <div class="place row5" id="col25">
+                </div>
+                <div class="place row4" id="col24">
+                </div>
+                <div class="place row3" id="col23">
+                </div>
+                <div class="place row2" id="col22">
+                </div>
+                <div class="place row1" id="col21">
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-15 centered">
+            <div class="chevronDiv"><a href="#" class="moveHref" id="c-col"><span data-action="col3" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
+
+            <div class="panel panel-info" id="colMain3" style="display: none;">
+                <div class="place row6" id="col36" >
+                </div>
+                <div class="place row5" id="col35" >
+                </div>
+                <div class="place row4" id="col34" >
+                </div>
+                <div class="place row3" id="col33" >
+                </div>
+                <div class="place row2" id="col32" >
+                </div>
+                <div class="place row1" id="col31" >
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-15 centered">
+            <div class="chevronDiv"><a href="#" class="moveHref" id="d-col"><span data-action="col4" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
+            <div class="panel panel-info" id="colMain4" style="display: none;">
+                <div class="place row6" id="col46" >
+                </div>
+                <div class="place row5" id="col45" >
+                </div>
+                <div class="place row4" id="col44" >
+                </div>
+                <div class="place row3" id="col43" >
+                </div>
+                <div class="place row2" id="col42" >
+                </div>
+                <div class="place row1" id="col41" >
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-15 centered">
+            <div class="chevronDiv"><a href="#" class="moveHref" id="e-col"><span data-action="col5" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
+            <div class="panel panel-info" id="colMain5" style="display: none;">
+                <div class="place row6" id="col56" >
+                </div>
+                <div class="place row5" id="col55" >
+                </div>
+                <div class="place row4" id="col54" >
+                </div>
+                <div class="place row3" id="col53" >
+                </div>
+                <div class="place row2" id="col52" >
+                </div>
+                <div class="place row1" id="col51" >
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-15 centered">
+            <div class="chevronDiv"><a href="#" class="moveHref" id="f-col"><span data-action="col6" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
+            <div class="panel panel-info" id="colMain6" style="display: none;">
+                <div class="place row6" id="col66" >
+                </div>
+                <div class="place row5" id="col65" >
+                </div>
+                <div class="place row4" id="col64" >
+                </div>
+                <div class="place row3" id="col63" >
+                </div>
+                <div class="place row2" id="col62" >
+                </div>
+                <div class="place row1" id="col61" >
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-15 centered">
+            <div class="chevronDiv"><a href="#" class="moveHref" id="g-col"><span data-action="col7" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
+            <div class="panel panel-info" id="colMain7" style="display: none;">
+                <div class="place row6" id="col76" >
+                </div>
+                <div class="place row5" id="col75" >
+                </div>
+                <div class="place row4" id="col74" >
+                </div>
+                <div class="place row3" id="col73" >
+                </div>
+                <div class="place row2" id="col72" >
+                </div>
+                <div class="place row1" id="col71" >
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+    </div>
 
     <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6" style="background-color: lightblue;" id="referenceCol">
     </div>
@@ -408,6 +408,7 @@
             }
         }
 
+
         //animation
         function animate(col, color) {
             var mainCanvas = document.querySelector("#canvas");
@@ -446,6 +447,14 @@
                     mainContext.clearRect(Xpos - 22, Ypos - 50 + speed * acceleration, 45, 70);
                     cancelAnimationFrame(requestID);
                     drawCircle(calculateX(col), calculateY(col), color, col);
+
+                    //end of game check if the table if full
+                    if (COMPUTER.moveCounter === 42) {
+                        if ($('#playAgain').css('display') == 'none') {
+                            $('#victory').html('GAME IS DRAW');
+                            $('#playAgain').show();
+                        }
+                    }
                 }
                 Ypos += speed * acceleration;
                 acceleration += 0.15;
