--- a/src/AppBundle/Resources/views/Default/game.html.twig
+++ b/src/AppBundle/Resources/views/Default/game.html.twig
@@ -128,7 +128,7 @@
         </div>
     </div>
 
-    <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
+    <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-3 col-md-6 col-lg-offset-4 col-lg-4">
         <div class="centered" style="margin-top:-20px;">
             <span style="font-family:'Arcade Rounded';font-weight:normal;font-size:15px">Opponent: {{opponent.name}} </span>
         </div>
@@ -137,7 +137,7 @@
             <span id="statusMessage" style="font-family:'Arcade Rounded';font-weight:normal;font-size:10px"> </span>
         </div>
         <div class="col-xs-1" style="display: none;" id="startcolor" data-value="{{startColor}}"></div>
-        <div class="col-xs-12" style="min-height:20px; font-family:'Arcade Interlaced';font-weight:normal;font-size:32px;text-align: center;" class="victory" id="victory"></div>
+        <div class="col-xs-12" style="min-height:20px; font-family:'Arcade Rounded';font-weight:normal;font-size:32px;text-align: center; display:none;" class="victory" id="victory"></div>
         <div id="victory-blue" class="col-xs-12" style="font-family:'Arcade Rounded';font-weight:normal;font-size:30px; text-align: center;"></div>
         <div id="victory-red" class="col-xs-12" style="font-family:'Arcade Rounded';font-weight:normal;font-size:30px; text-align: center;"></div>
         <div id="redName" {% if myColor == 'red' %} action-name="{{user.userName}}"{% else %}action-name="{{opponent.name}}" {% endif %} ></div>
@@ -148,7 +148,7 @@
         </div>
     </div>
 
-    <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6 mycol" style="margin-top:-10px;" id="myMainPanel">
+    <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-3 col-md-6 col-lg-offset-4 col-lg-4 mycol" style="margin-top:5px;" id="myMainPanel">
         <div class="col-xs-15 centered">
             <div class="chevronDiv"><a href="#" class="moveHref" id="a-col"><span data-action="col1" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
 
@@ -273,19 +273,18 @@
         </div>
 
 
-
+            <div class="col-xs-12" style="background-color: lightblue;" id="referenceCol">
+            </div>
+            <div id="canvas-container">
+                <canvas id="canvas" width="400" height="380" style="border:0px;">
+                    This text is displayed if your browser does not support HTML5 Canvas.
+                </canvas>
+            </div>
 
 
     </div>
 
 
-    <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6" style="background-color: lightblue;" id="referenceCol">
-    </div>
-    <div id="canvas-container">
-        <canvas id="canvas" width="400" height="380" style="border:0px;">
-            This text is displayed if your browser does not support HTML5 Canvas.
-        </canvas>
-    </div>
 
 
 
@@ -750,6 +749,19 @@
             }
             draw();
         }
+
+        function animateVictory(name) {
+            $("#victory").html(name + ' wins!');
+            $("#victory").slideDown("slow", function () {
+                setTimeout(function () {
+                    $("#playAgain").slideDown("slow", function () {
+                        //complete
+                    });
+                }, 2000);
+            });
+        }
+        //animateVictory('Peter');
+
 
 
 
