--- a/src/AppBundle/Resources/views/Default/sologame.html.twig
+++ b/src/AppBundle/Resources/views/Default/sologame.html.twig
@@ -60,7 +60,7 @@
 {% endblock %}        
 
 {% block body %}
-    <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
+    <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-3 col-md-6 col-lg-offset-4 col-lg-4">
         <div class="centered" style="margin-top:-20px;">
             <span style="font-family:'Arcade Rounded';font-weight:normal;font-size:15px">Opponent: computer</span>
         </div>
@@ -70,15 +70,13 @@
         </div>
 
         <div class="col-xs-1" style="display: none;" id="startcolor" data-value="blue"></div>
-        <div class="col-md-12 textCentered" style="min-height:10px; font-family:'Arcade Rounded';font-weight:normal;font-size:28px" id="victory"></div>
+        <div class="col-md-12 textCentered" style="min-height:10px; font-family:'Arcade Rounded';font-weight:normal;font-size:28px; display:none;" id="victory"></div>
         <div id="playAgain" class="col-xs-12 textCentered" style="display:none;">
             <p><a href="{{path('app_sologame')}}" class="btn btn-success btn-sm playUser" style="font-family:'Arcade Rounded'" role="button">Play again</a></p>
             <p><a href="{{path('app_main')}}" class="btn btn-danger btn-sm cancelButton" style="font-family:'Arcade Rounded'" role="button">Not now!</a></p>
         </div>
     </div>
-    <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6 mycol">
-
-
+    <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-3 col-md-6 col-lg-offset-4 col-lg-4 mycol" style="margin-top:8px;">
 
         <div class="col-xs-15 centered">
             <div class="chevronDiv"><a href="#" class="moveHref" id="a-col"><span data-action="col1" class="gi-10p glyphicon glyphicon-chevron-down myChevron" style="color:#337ab7;"></span></a></div>
@@ -203,21 +201,21 @@
             </div>
         </div>
 
-
-
-
-
-    </div>
-
-    <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6" style="background-color: lightblue;" id="referenceCol">
-    </div>
-    <div class="row">
-        <div id="canvas-container">
-            <canvas id="canvas" width="400" height="380" style="border:0px;">
-                This text is displayed if your browser does not support HTML5 Canvas.
-            </canvas>
+        <div class="col-xs-12" style="background-color: lightblue;" id="referenceCol">
         </div>
+        <div class="row">
+            <div id="canvas-container">
+                <canvas id="canvas" width="400" height="380" style="border:0px;">
+                    This text is displayed if your browser does not support HTML5 Canvas.
+                </canvas>
+            </div>
+        </div>
+
+
+
+
     </div>
+
 
 {% endblock %}   
 
@@ -374,8 +372,8 @@
 
         //display controller
         function triggerDisplay(col, color, pcColor) {
-            console.log('USERCOLOR ' + color);
-            console.log('PCCOLOR ' + pcColor);
+            //console.log('USERCOLOR ' + color);
+            //console.log('PCCOLOR ' + pcColor);
             animate(col, color);
             //displayCols();
         }
@@ -463,9 +461,24 @@
         }
 
 
-
-
-
+        function animateVictory(color) {
+            $("#a-col").remove();
+            $("#b-col").remove();
+            $("#c-col").remove();
+            $("#d-col").remove();
+            $("#e-col").remove();
+            $("#f-col").remove();
+            $("#g-col").remove();
+            $("#victory").html(color + ' wins!');
+            $("#victory").slideDown("slow", function () {
+                setTimeout(function () {
+                    $("#playAgain").slideDown("slow", function () {
+                        //complete
+                    });
+                }, 2000);
+            });
+        }
+        //animateVictory('red');
 
 
 
