--- a/src/AppBundle/Resources/views/Default/sologame.html.twig
+++ b/src/AppBundle/Resources/views/Default/sologame.html.twig
@@ -62,11 +62,11 @@
 {% block body %}
     <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-3 col-md-6 col-lg-offset-4 col-lg-4">
         <div class="centered" style="margin-top:-20px;">
-            <span style="font-family:'Arcade Rounded';font-weight:normal;font-size:15px">Opponent: computer</span>
+            <span style="font-family:'Arcade Rounded';font-weight:normal;font-size:15px; margin-top:3px;">Opponent: computer</span>
         </div>
         <div class="centered">
-            <span style="font-family:'Arcade Rounded';font-weight:normal;font-size:10px">Status: </span>
-            <span id="statusMessage" move-name="{{user.userName}}" style="font-family:'Arcade Rounded';font-weight:normal;font-size:10px"> my move</span>
+            <span style="font-family:'Arcade Rounded';font-weight:normal;font-size:10px; margin-top:-3px;">Status: </span>
+            <span id="statusMessage" move-name="{{user.userName}}" style="font-family:'Arcade Rounded';font-weight:normal;font-size:10px; margin-top:-3px;"> my move</span>
         </div>
 
         <div class="col-xs-1" style="display: none;" id="startcolor" data-value="blue"></div>
